--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,236 +1,98 @@
-* {
-	box-sizing: border-box; 
+.container-fluid{
+	margin: 0;
+	padding: 0;
 }
-.row {
+
+.navbar{
+	border-radius: 0px;
+	background-color: rgba(0,0,0,0.8);
+}
+
+.navbar-brand{
+  font-size: 35px;
+  color: white;
+  padding-left: 25px;
+}
+
+.navbar-brand:hover{
+	color: white;
+}
+
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-toggle{
+	border: 2px solid white;
+	margin-right: 25px;
+}
+
+.icon-bar{
+	background-color: white;
+}
+
+
+.main-title{
+  margin-bottom: 15px;
+  text-align: center;
+  color: rgb(24, 124, 170);
+  font-size: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight: bold;
+}
+
+li{
+	box-sizing: border-box;
 	width: 100%;
 }
-@media (max-width: 767px) {
-	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6,
-	.col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-		float: left;
-	}
-	.col-sm-1 {
-		width: 8.33%;
-	}
 
-	.col-sm-2 {
-		width: 16.66%;
-	}
-
-	.col-sm-3 {
-		width: 25%;
-	}
-
-	.col-sm-4 {
-		width: 33.33%;
-	}
-
-	.col-sm-5 {
-		width: 41.66%;
-	}
-
-	.col-sm-6 {
-		width: 50.00%;
-	}
-
-	.col-sm-7 {
-		width: 58.33%;
-	}
-
-	.col-sm-8 {
-		width: 66.66%;
-	}
-
-	.col-sm-9 {
-		width: 75%;
-	}
-
-	.col-sm-10 {
-		width: 83.33%%
-	}
-
-	.col-sm-11 {
-		width: 91.66%;
-	}
-
-	.col-sm-12 {
-		width: 100%;
-	}
-}
-@media (min-width: 768px) and (max-width: 991px){
-	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6,
-	.col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-		float: left;
-	}
-
-	.col-md-1 {
-		width: 8.33%;
-	}
-
-	.col-md-2 {
-		width: 16.66%;
-	}
-
-	.col-md-3 {
-		width: 25%;
-	}
-
-	.col-md-4 {
-		width: 33.33%;
-	}
-
-	.col-md-5 {
-		width: 41.66%;
-	}
-
-	.col-md-6 {
-		width: 50.00%;
-	}
-
-	.col-md-7 {
-		width: 58.33%;
-	}
-
-	.col-md-8 {
-		width: 66.66%;
-	}
-
-	.col-md-9 {
-		width: 75%;
-	}
-
-	.col-md-10 {
-		width: 83.33%%
-	}
-
-	.col-md-11 {
-		width: 91.66%;
-	}
-
-	.col-md-12 {
-		width: 100%;
-	}
-}
-@media (min-width: 992px) {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
-	.col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-		float: left;
-	}
-	.col-lg-1 {
-		width: 8.33%;
-	}
-
-	.col-lg-2 {
-		width: 16.66%;
-	}
-
-	.col-lg-3 {
-		width: 25%;
-	}
-
-	.col-lg-4 {
-		width: 33.33%;
-	}
-
-	.col-lg-5 {
-		width: 41.66%;
-	}
-
-	.col-lg-6 {
-		width: 50.00%;
-	}
-
-	.col-lg-7 {
-		width: 58.33%;
-	}
-
-	.col-lg-8 {
-		width: 66.66%;
-	}
-
-	.col-lg-9 {
-		width: 75%;
-	}
-
-	.col-lg-10 {
-		width: 83.33%;
-	}
-
-	.col-lg-11 {
-		width: 91.66%;
-	}
-
-	.col-lg-12 {
-		width: 100%;
-	}
+.menu-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
 }
 
-p{
-    font-family:arial black;
-} 
-h1, h2 {
-	font-family:comic sans ms;
+.menu-item:hover{
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
 }
 
-section {
-	position: relative;
+
+
+.row{
 	margin: 20px;
 }
 
-section > h2 {
-	position: absolute;
-	margin-top: 0px;
-	top: 0px;
-	right: 0px;
-	width: 200px;
+.content-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
+}
+
+.item-name{
 	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+    color: rgb(184, 43, 90);
+    font-family: algerian;
 }
 
-section > p {
-	padding: 50px 10px 10px 10px;
-}
+#top{
 
-div > h1 {
-	width: 100%;
-	text-align: center;
-	font-size: 175%;
-}
-
-h2 {
-	font-size: 125%;
-}
-
-section, section > h2 {
-	border: 1px solid black;
-}
-
-.row {
-
-}
-
-#section-1 {
-	background-color: rgb(248, 248, 122);
-}
-
-#section-2 {
-	background-color: rgb(245, 97, 97);
-}
-
-#section-3 {
-	background-color: rgb(170, 240, 170);
-}
-
-#section-1 > h2 {
-	background-color: rgb(83, 83, 247);
-    color:rgb(241, 229, 115);
-}
-
-#section-2 > h2 {
-	background-color: rgb(34, 29, 29);
-    color: aliceblue;
-}
-
-#section-3 > h2 {
-	background-color: brown;
-    color:aquamarine;
 }
